tests/enumerror/__snapshots__/jsfmt.spec.js.snap
exports[`test enumerror.js 1`] = `
"/** @flow */

function isActive(ad: {state: $Keys<{
    PAUSED: string;
    ACTIVE: string;
    DELETED: string;
}>}): boolean {
    return ad.state === \'ACTIVE\';
};
isActive({state: \'PAUSE\'});

var MyStates = {
    PAUSED: \'PAUSED\',
    ACTIVE: \'ACTIVE\',
    DELETED: \'DELETED\',
};
function isActive2(ad: {state: $Keys<typeof MyStates>}): boolean {
    return ad.state === MyStates.ACTIVE;
};
isActive2({state: \'PAUSE\'});

type Keys = $Keys<{ x: any, y: any }>;
type Union = \"x\" | \"y\"

function keys2union(s: Keys): Union { return s; } // ok
function union2keys(s: Union): Keys { return s; } // ok
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/src/printer.js:1497
        fromString(\", \").join(path.map(print, \"params\")),
                         ^

TypeError: fromString(...).join is not a function
    at genericPrintNoParens (/src/printer.js:1497:26)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
    at printGenerically (/src/printer.js:111:12)
    at FastPath.call (/src/fast-path.js:113:16)
    at genericPrintNoParens (/src/printer.js:1374:14)
    at genericPrint (/src/printer.js:166:7)
    at p (/src/printer.js:111:37)
    at exports.printComments (/src/comments.js:327:20)
"
`;
